k8s/services/static/app/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
spec:
  replicas: 1
  template:
    spec:
      enableServiceLinks: false
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/nginx/nginx.conf
              readOnly: true
              subPath: nginx.conf
            - name: config
              mountPath: /etc/nginx/conf.d/default.conf
              readOnly: true
              subPath: default.conf
            - name: data
              mountPath: /data
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: static-config
        - name: data
          persistentVolumeClaim:
            claimName: static-data
