k8s/services/static/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-lama-corp-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "lama-corp.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "www.lama-corp.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "lama-corp.space"

        - "www.lama-corp.space"

      secretName: "static-lama-corp-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-rplace-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "rplace.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "rplace.space"

      secretName: "static-rplace-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-doyouhavegoodbackups-com"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "doyouhavegoodbackups.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "doyouhavegoodbackups.com"

      secretName: "static-doyouhavegoodbackups-com-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-as212024-net"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "as212024.net"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "as212024.net"

      secretName: "static-as212024-net-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-acdc-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "acdc.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "acdc.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "acdc.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "acdc.risson.space"

        - "acdc.marcerisson.space"

        - "acdc.risson.me"

      secretName: "static-acdc-risson-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-cats-acdc-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "cats.acdc.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "cats.acdc.epita.fr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "cats.acdc.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "cats.acdc.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "cats.acdc.risson.space"

        - "cats.acdc.epita.fr"

        - "cats.acdc.marcerisson.space"

        - "cats.acdc.risson.me"

      secretName: "static-cats-acdc-risson-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-jdmi-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "jdmi.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "jdmi.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "jdmi.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "jdmi.risson.space"

        - "jdmi.marcerisson.space"

        - "jdmi.risson.me"

      secretName: "static-jdmi-risson-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "www.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "www.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "www.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "risson.space"

        - "www.risson.space"

        - "marcerisson.space"

        - "www.marcerisson.space"

        - "risson.me"

        - "www.risson.me"

      secretName: "static-risson-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-scoreboard-seedbox-cri-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "scoreboard-seedbox-cri.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "scoreboard-seedbox-cri.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "scoreboard-seedbox-cri.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "scoreboard-seedbox-cri.risson.space"

        - "scoreboard-seedbox-cri.marcerisson.space"

        - "scoreboard-seedbox-cri.risson.me"

      secretName: "static-scoreboard-seedbox-cri-risson-space-tls"

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "static-workshop-risson-space"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
spec:
  rules:
    - host: "workshop.risson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "workshop.marcerisson.space"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

    - host: "workshop.risson.me"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: static
                port:
                  name: http

  tls:
    - hosts:
        - "workshop.risson.space"

        - "workshop.marcerisson.space"

        - "workshop.risson.me"

      secretName: "static-workshop-risson-space-tls"
